Make inventory placement player authoritative